# lift

./: .gitattributes  .gitignore  .pants.bootstrap  BUILD  CHANGES.md  CONTRIBUTING.md  README.md  RELEASE.md  complete-platform.windows-amd64-py3.11.json  complete-platform.windows-amd64-py3.12.json  install.ps1  install.sh  lift.toml  lock.in  lock.json  noxfile.py  pants.toml  pyproject.toml  requirements.lock.txt  requirements.txt  requirements.windows-amd64.lock.txt  science.toml  setup.py
.circleci/: config.yml
.github/workflows/: ci.yml  doc-site.yml  release.yml
docker/: Dockerfile
docs/: cli.rst  conf.py  index.md  index.rst  manifest.md  providers.md  providers.rst
docs/_ext/_science/: providers.py
docs/_ext/sphinx_science/: __init__.py  dataclass.py  directives.py  providers.py  render.py  toml.py
docs/_static/js/: icon_theme.js
docs/_templates/: extralinks.html
nox-support/: check-reqs.lock.txt  check-reqs.txt  check-reqs.windows-amd64.lock.txt  doc-reqs.txt  doc-reqs.windows-amd64.lock.txt  fmt-reqs.lock.txt  fmt-reqs.txt  fmt-reqs.windows-amd64.lock.txt  lint-reqs.txt  lock.checksums  package-reqs.lock.txt  package-reqs.txt  package-reqs.windows-amd64.lock.txt  test-reqs.lock.txt  test-reqs.txt  test-reqs.windows-amd64.lock.txt
science/: BUILD  __init__.py  __main__.py  a_scie.py  build_info.py  cache.py  config.py  context.py  data.py  dataclasses.py  doc.py  errors.py  exe.py  fetcher.py  frozendict.py  fs.py  hashing.py  jump.py  lift.py  model.py  options.py  os.py  platform.py  provider.py  ptex.py  types.py
science/commands/: _psutil.py  build.py  complete.py  doc.py  download.py  lift.py
science/dataclass/: __init__.py  deserializer.py  reflect.py
science/providers/: BUILD  __init__.py  pypy.py  python_build_standalone.py
scripts/: check-manifest.py  check-python-version-alignment.py  create-docker-images.py  create-zipapp.py
scripts/docker/: uv.py
scripts/docker/alpine/: Dockerfile
scripts/docker/debian/bookworm/: Dockerfile  post-install.sh
scripts/docker/debian/trixie/: Dockerfile
scripts/docker/uv/: Dockerfile
test-support/testing/: __init__.py
tests/: BUILD  conftest.py  test_a_scie.py  test_config.py  test_download.py  test_exe.py  test_fetcher.py  test_installer.py  test_model.py  test_ptex.py
tests/data/: BUILD  PBS-gnu-and-musl.toml  command-descriptions.toml  interpreter-groups.toml  platform-specs.toml  scie-base.toml  scie-base.windows.toml  unrecognized-config-fields.toml
