[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "science"
authors = [
    {name = "John Sirois", email = "john.sirois@gmail.com"},
]
description = "A high level tool to build scies with."
readme = "README.md"
requires-python = "==3.12.*"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]

[project.scripts]
science = "science.exe:main"

[tool.setuptools.dynamic]
version = {attr = "science.__version__"}
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["science*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
explicit_package_bases = true
mypy_path = "docs/_ext"

[[tool.mypy.overrides]]
module = "click_didyoumean"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click_log"
ignore_missing_imports = true
